	  tree and a table for inodes. This triggered radical 
	  changes to most parts of the source. However now it's 
	  possible to have hardlinks, delayed unlink and some other 
	  sweeties difficult or impossible to implement with 
	  the previous scheme.
	* open() stores inode number in fi->fh and read(), write()
	  release() and some other functions use that instead 
	  of translating path name to inode every time.
	* Updated schema.sql for the new DB layout. No transition
	  tools from the previous schema are provided because I don't
	  believe anyone has any valuable data in their FS ;-) If you
	  do, tar them up, upgrade and untar back again.
	* Started migrating the FS logic to mysqlfs.c. In the future
	  query.c will only have query primitives and we'll perhaps 
	  have query.c files for other DBs as well (Oracle,
	  PostgreSQL, ...)
	* Added some plans to TODO list.
	* Implemented link(), chown().
	* Fixed truncate().

2006-09-07  Michal Ludvig  <michal@logix.cz>

	* Read default MySQL options from one of my.cnf files.
	  Subsequently don't require the connect options
	  on the command line.

2006-09-06  Michal Ludvig  <michal@logix.cz>

	* Check for MySQL version both in configure.in and
	  when actually connecting the server.
	* Fixed a few minor omissions. Now it should run again
	  even on other machines than my one ;-)

2006-09-04  Michal Ludvig  <michal@logix.cz>

	* Fixed write() to actually do what a decent write() is
	  supposed to do.
	* Pulled 'data' column to a separate table.
	* Implemented truncate(), symlink(), readlink()
	* Implemented limited rename() only for regular files
	* Added better logging infrastructure, converted
	  all plain printf() calls to log_printf()
	* Removed autogenerated files from CVS.
	* Various cleanups and improvements on autoconfig front.
	* Minor cleanups here and there.

2006-07-23  Tsukasa Hamano <code@cuspy.org>

	* Released 0.2

2006-06-08  Tsukasa Hamano <code@cuspy.org>

	* Released 0.1